<resources>
    <string name="app_name">The Registrar</string>
    <string name="action_settings">Settings</string>
    <string name="text_login">Login</string>
    <string name="title_activity_admin">Admin</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="emergency">Emergency</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="log_in">Log In</string>
    <string name="password">Password:</string>
    <string name="please_login">Please Login</string>
    <string name="background_image">Background Image</string>
    <string name="username">Username:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Admin">Administrator</string>
    <string name="app_mail">theregistrar@cedarlab.com</string>
</resources>
