<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="imond.ke.co.database.Facilitator">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:alpha="0.8"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/theregistrar"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:paddingTop="100dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/the_registrar" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="20dp">


            <ImageView
                android:id="@+id/clockin"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="61dp"
                android:layout_marginStart="61dp"
                android:contentDescription="@string/clock_in"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/clockin" />

            <ImageView
                android:id="@+id/clockout"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/clockin"
                android:layout_marginEnd="37dp"
                android:layout_marginRight="37dp"
                android:contentDescription="@string/clock_out"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/clockout" />

            <ImageView
                android:id="@+id/emergency"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_alignEnd="@+id/clockout"
                android:layout_alignRight="@+id/clockout"
                android:layout_below="@+id/clockin"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="19dp"
                android:contentDescription="@string/emergency"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/emergency" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
